bk_ida/gccida/c2/clear_storage
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3044:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3048:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3049:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3065:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3066:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3068:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3069:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3070:5: error: expected ';' after expression
tree v36; // rbx 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3070:6: error: use of undeclared identifier 'v36'
tree v36; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3071:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3072:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3073:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3074:5: error: expected ';' after expression
tree v40; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3074:6: error: use of undeclared identifier 'v40'
tree v40; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3075:5: error: expected ';' after expression
tree v41; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3075:6: error: use of undeclared identifier 'v41'
tree v41; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3086:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( __int64)object[1]; 
               ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3094:40: error: use of undeclared identifier 'machine_mode'
mode_alignment = get_mode_alignment( ( machine_mode)BYTE2( v2)); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/expr.c:3109:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v8.rtwint = ( __int64)v6->fld[0]; 
                      ^~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/clear_storage/src/obj/expr.o] Error 1
